<resources>
    <string name="app_name">Arduino Data Widget</string>
    <string name="title_activity_widget_config">WidgetConfigActivity</string>
    <string name="title_activity_general_options">General Options</string>

    <string name="add_widget_button">Add Widget</string>
    <string name="enter_parameter_name">Enter parameter name:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="settings">Settings</string>
    <string name="save_settings">Save Settings</string>
    <string name="choose_text_size">Choose text size:</string>
    <string name="choose_text_font">Choose text font:</string>
    <string name="show_parameter_name">Hide parameter name</string>
    <string name="widget_options">Widget Options</string>
    <string name="general_options">General Options</string>
    <string name="choose_text_color">Choose text color:</string>

    <string name="pref_title_interval">Select font size (sp):</string>
    <string name="pref_text_color">Select text color:</string>
    <string name="pref_back_color">Select background color:</string>
    <string name="pref_header_general">General Options</string>
</resources>
