<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:title="Pick current font"
        android:key="text_font"/>

    <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
        xmlns:vntnumberpickerpreference="http://schemas.android.com/apk/res-auto"
        android:defaultValue="12"
        android:key="text_size"
        android:title="@string/pref_title_interval"
        vntnumberpickerpreference:maxValue="100"
        vntnumberpickerpreference:minValue="1"
        vntnumberpickerpreference:setWrapSelectorWheel="true"/>

    <com.rarepebble.colorpicker.ColorPreference
        android:key="text_color"
        android:title="@string/pref_text_color"
        app:colorpicker_defaultColor="#ffffff"/>

    <com.rarepebble.colorpicker.ColorPreference
        android:key="background_color"
        android:title="@string/pref_back_color"
        app:colorpicker_defaultColor="#000000"/>

</PreferenceScreen>